# weather_analytics

./: .gitignore  README.md  databricks.yml  pyproject.toml
data/bronze/: weather.json  weather_20260704_173429.json  weather_20260704_173439.json  weather_20260704_174112.json  weather_20260711_222002.json  weather_20260711_222027.json  weather_20260711_223132.json  weather_20260711_230907.json  weather_20260711_231724.json  weather_20260711_231753.json
resources/jobs/: ingest_weather.yml
resources/sql/bronze/: weather_raw.sql
resources/sql/silver/: weather_curated.sql
src/weather_analytics/: bronze_app.py  main.py  silver_app.py
src/weather_analytics/api/: weather_client.py
src/weather_analytics/config/: config.py  location.py
src/weather_analytics/processing/: bronze_processor.py  silver_processor.py
src/weather_analytics/storage/: file_manager.py
