[project]
name = "weather-analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "ArkadiptaGhosh",email = "arkadiptaghosh99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.34.2,<3.0.0)"
]

[project.scripts]
weather-main = "weather_analytics.main:main"

[tool.poetry]
packages = [{include = "weather_analytics", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"